--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -717,6 +717,11 @@ Most of the coverage can then be captured without including too much background 
 In contrast, the NF-YA profile drops off more sharply.
 This indicates that a smaller window size ($< 50$ bp) is probably adequate, consistent with sharp TF binding.
 
+% Technically, you should also lop off 50 bp, because the loss of resolution inflates the apparent width.
+% Imagine if binding occured at 1 bp; random placement within the 50 bp bin would give a summit width of 50 bp.
+% However, it's all fairly approximate anyway, so I won't make too much of an issue about it.
+% I would only bother if I were to automate this step with another function, otherwise it's too much detail for the user.
+
 In practice, a clear-cut choice of distance/window size is rarely found in real datasets.
 For many non-TF targets, the widths of the enriched regions can be highly variable.
 This manifests as a long tail in the coverage profile plot and suggests that no single window size is optimal.
