--- a/userguide/comments.Rnw
+++ b/userguide/comments.Rnw
@@ -34,7 +34,6 @@
 #if (file.exists(picdir)) { unlink(picdir, recursive=TRUE) }
 #dir.create(picdir)
 require(edgeR)
-set.seed(238472)
 @
 
 \begin{document}
@@ -208,7 +207,12 @@ Use of \code{discard} to ignore blacklisted regions is less effective as these r
 At the very least, you'd have to use RepeatMasker annotations, which are too aggressive for my taste.
 
 \subsection*{Comments on normalization}
+
 \subsubsection*{TMM on the binned counts}
+
+<<echo=FALSE>>=
+set.seed(238472)
+@
 
 Smaller counts do have greater variance in the resulting fold changes.
 This is because it's more possible for smaller counts to achieve a large fold change than it is for larger counts (as the former is less stable). 
@@ -233,22 +237,22 @@ More generally, discreteness reduces the accuracy of the normalization factor es
 
 <<>>=
 # Simulating undersampling with spiked-in genes.
-simulator <- function(ngenes, total.cols, spiked.cols, genes.spiked, mu.back, mu.spike, disp) {
-    x <- matrix(rnbinom(ngenes, mu=mu.back, size=1/disp), nrow=ngenes, ncol=total.cols);
-    normed <- mu.back*ngenes/(mu.back*(ngenes-genes.spiked)+mu.spike*genes.spiked);
-    x[,(spiked.cols+1):total.cols] <- rnbinom(ngenes, mu=mu.back*normed, size=1/disp);
-    spiked <- sample(ngenes, genes.spiked);
-    x[spiked,(spiked.cols+1):total.cols] <- rnbinom(genes.spiked,
-        mu=mu.spike*normed, size=1/disp);
-    return(list(counts=x, factor=normed, spiked=spiked));
+simulator <- function(ngenes, genes.spiked, mu.back, mu.spike, disp) {
+    x <- matrix(rnbinom(ngenes, mu=mu.back, size=1/disp), nrow=ngenes, ncol=2)
+    normed <- mu.back*ngenes/(mu.back*(ngenes-genes.spiked)+mu.spike*genes.spiked)
+    x[,2] <- rnbinom(ngenes, mu=mu.back*normed, size=1/disp)
+    spiked <- sample(ngenes, genes.spiked)
+    x[spiked,2] <- rnbinom(genes.spiked, mu=mu.spike*normed, size=1/disp)
+    return(list(counts=x, factor=normed, spiked=spiked))
 }
 ngenes <- 10000
-x <- simulator(ngenes, 2, 1, 200, 2, 10, 0.05)
+x <- simulator(ngenes, 200, 2, 10, 0.05)
 calcNormFactors(x$counts)
-x <- simulator(ngenes, 2, 1, 200, 5, 25, 0.05)
+x <- simulator(ngenes, 200, 5, 25, 0.05)
 calcNormFactors(x$counts)
-x <- simulator(ngenes, 2, 1, 200, 50, 250, 0.05)
+x <- simulator(ngenes, 200, 50, 250, 0.05)
 calcNormFactors(x$counts)
+c(1/sqrt(x$factor), sqrt(x$factor)) # Truth.
 @
 
 As to the choice of bin size, if you have libraries of similar size, you could just throw in a bunch of bin sizes and take the most extreme (i.e. different from 1) factors that you can find.
@@ -344,6 +348,65 @@ Conversely, the presence of a non-zero mass between conditions but not between r
 While stochastic efficiency bias mightn't be generated between replicates, a systematic bias might be present between conditions.
 This may be caused by condition-specific factors, e.g., differences in nuclear shape, changes in cross-linking due to serum concentrations.
 
+\subsubsection*{Caveats with non-linear methods}
+
+The current implementation uses a fast approach, whereby all samples are compared to an average library.
+This is valid as you're just using the average as a proxy between which libraries are compared.
+As the covariate is also the average count, you're effectively comparing the trend for each library to the same diagonal line.
+You don't need to worry about comparing each library to, e.g., the average of all other libraries.
+
+However, there is a caveat with using the overall average as the covariate.
+When you have DE, the concept of the overall average makes no sense.
+This means that the point will get misplaced and normalized in strange ways.
+Normally, this isn't a problem, as the correct normalization for DE genes isn't well defined.
+However, if you have more than two groups, DE in the third group would affect normalization for non-DE genes between the first two groups.
+
+This is shown in the example below.
+The first gene displayed should have no differences between the first two groups upon normalization, but DE in the third group prevents this from happening.
+Similarly, the second gene should have no differences between the first and last groups, but this is disrupted by DE in the second group.
+In contrast, the last gene is non-DE across all groups and behaves properly.
+
+<<echo=FALSE>>=
+set.seed(231232)
+@
+
+<<>>=
+ngenes <- 10000
+true.means <- runif(ngenes, 1, 10)
+y <- matrix(0, nrow=ngenes, ncol=3)
+y[,1] <- rnorm(ngenes, mean=true.means)
+y[,2] <- rnorm(ngenes, mean=2*true.means)
+y[,3] <- rnorm(ngenes, mean=1.5*true.means)
+y <- rbind(y, c(2, 4, 10), c(2, 10, 3), c(2,4,3))	
+y.fast <- normalizeCyclicLoess(y, method="fast")
+tail(y.fast, 3)
+@
+
+One might think to overcome this problem by using covariates computed in a pairwise manner, as in Affymetrix-based normalization.
+This helps a little, but the core of the problem still remains.
+Note that this is not truly pairwise normalization, as the adjustment to the values is made after all pairwise normalization is performed.
+In true pairwise normalization, adjustments are made immediately after each pairwise comparison.
+
+<<>>=
+y.affy <- normalizeCyclicLoess(y, method="affy") 
+tail(y.affy, 3)
+@
+
+Using true pairwise cyclic normalization fixes the first gene, but the second gene still results in DE.
+This is because the success of this procedure depends on the order with which the libraries are normalized.
+In the first gene, the first two libraries are equalized first, which results in consistent behaviour for those two libraries across the remaining normalization steps.
+This is not the case for the second gene.
+
+<<>>=
+y.pair <- normalizeCyclicLoess(y, method="pair") 
+tail(y.pair, 3)
+@
+
+Another disadvantage of pairwise normalization is that the covariates are less stable.
+This results in a modest increase in the normalization error, though nothing to really panic about.
+In short, there's no obvious solution to this problem.
+I'm going to stick with the what I've got right now, as it's easy to use and understand. 
+
 \subsubsection*{Dealing with other biases}
 
 Note that Cheung (i.e. Ahringer) go about dividing ChIP samples by input controls and stating that there are differences in the called regions between replicates. 
@@ -401,7 +464,11 @@ Choosing the filter which gets you the greatest number of DE regions isn't the b
 At any given filter value, the expected FDR is controlled by the BH method rather than the actual FDR. 
 Trying to maximize the number of significant tests will result in loss of FDR control as it's not an unbiased expectation anymore. 
 It's worst with strong correlations between the nulls.
-	
+
+<<echo=FALSE>>=
+set.seed(1478343)
+@
+
 <<>>=
 collected <- list()
 max.collect <- list()
@@ -438,9 +505,9 @@ In more detail; there's problems with computing the p-values and correcting for 
 Consider the purest case, where you determine significance based on the enrichment values (use a constant variance, so same selection order).
 If you pick a set based on the FDR, the selection of one region becomes dependent on how many other regions have higher enrichments.
 This might be annoying if you're trying to use a stable pre-set threshold.
-Another problem is that you're requiring rejection at an FDR of 5% in order to get into the retained set.
+Another problem is that you're requiring rejection at an FDR of 5\% in order to get into the retained set.
 This may be too conservative for preliminary selection, where windows that cannot reject here might have a lot of evidence for DB.
-In the end, you might end up having to fiddle with non-conventional FDR thresholds (e.g., 10-20%), which gets us back to the problem of arbitrariness.
+In the end, you might end up having to fiddle with non-conventional FDR thresholds (e.g., 10-20\%), which gets us back to the problem of arbitrariness.
 High FDR thresholds might also start to run into problems with monotonicity, where filter resolution is lost.
 
 In short, you might get a FDR for your filter, but so what - now it's just another number with an arbitrary threshold.
@@ -475,6 +542,10 @@ If you then merge the sets, the FDR should be controlled within the merged sets,
 However, if you take this to its extreme, you could split those $p$-values into trivially small sets, e.g., of size 1.
 Controlling the FDR within each set would not change the size of the $p$-values.
 So, upon merging, you'd be defining significance from the raw $p$-values, which doesn't control the FDR.
+
+<<echo=FALSE>>=
+set.seed(141233)
+@
 
 <<>>=
 all.p <- c(rep(1e-8, 100), runif(900))
